# docs/swagger.json
@@ -11,6 +11,43 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/public/user/add": {
+            "post": {
+                "description": "用于添加用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户管理模块"
+                ],
+                "summary": "添加用户",
+                "parameters": [
+                    {
+                        "description": "ADD USER INFO",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UserAddDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "操作成功",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "操作失败",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/public/user/login": {
             "post": {
                 "description": "用于用户登录系统",
@@ -39,7 +76,7 @@
                             "type": "string"
                         }
                     },
-                    "401": {
+                    "500": {
                         "description": "登录失败",
                         "schema": {
                             "type": "string"
@@ -50,6 +87,36 @@
         }
     },
     "definitions": {
+        "dto.UserAddDTO": {
+            "type": "object",
+            "required": [
+                "name",
+                "password"
+            ],
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "real_name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.UserLoginDTO": {
             "type": "object",
             "required": [
